--- a/src/my_robot_description/config/controllers.yaml
+++ b/src/my_robot_description/config/controllers.yaml
@@ -12,13 +12,15 @@ controller_manager:
       type: imu_sensor_broadcaster/IMUSensorBroadcaster
 
     right_foot_sensor:
-      type: force_torque_sensor_broadcaster/ForceTorqueSensorBroadcaster
+      type: generic_sensor_broadcaster/GenericSensorBroadcaster
       sensor_name: right_foot_fz
+      interfaces: [ force.z ]
       frame_id: feet
 
     left_foot_sensor:
-      type: force_torque_sensor_broadcaster/ForceTorqueSensorBroadcaster
+      type: generic_sensor_broadcaster/GenericSensorBroadcaster
       sensor_name: left_foot_fz
+      interfaces: [ force.z ]
       frame_id: feet_2
 
 
